# message_queue_practical

./: .gitignore  ADR.md  CMakeLists.txt  README.md  benchmark.cpp  blocking-bounded-queue.md  michael_scott_queue.md  Сценарии Тестирования.md
lib/: circular_bounded_message_queue.hpp  circular_message_queue.hpp  circular_overwrite_oldest_message_queue.hpp  circular_queue_sync.hpp  deque_bounded_message_queue.hpp  exception.hpp  message_queue_interface.hpp  michael_scott_queue.hpp  min-heap_queue.hpp
lib/circular/: circular_bounded_message_queue.hpp  circular_message_queue.hpp  circular_overwrite_oldest_message_queue.hpp  sync.hpp
lib/circular/impl/: mpmc_bounded_sync_helper.hpp  semaphore.hpp  sync_mpmc.hpp  sync_mpsc.hpp  sync_spmc.hpp  sync_spsc.hpp
tests/: CMakeLists.txt  circular_buffer_concurrency_test.cpp  circular_buffer_correctness_test.cpp  circular_buffer_deadlock_test.cpp  circular_buffer_timing_test.cpp  coverage.cmake  deque_bounded_concurrency_test.cpp  deque_bounded_correctness_test.cpp  deque_bounded_deadlock_test.cpp  exception_tests.cpp  michael_scott_tests.cpp  min_heap_tests.cpp  test_helpers_circular.hpp  test_helpers_common.hpp  test_helpers_deque.hpp
